--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -86,6 +86,11 @@
     background-color: #fff;
 }
 
+.devider-full-width {
+    border-top: dashed 1px #000;
+    background-color: #fff;
+}
+
 .add-wishlist-pdp {
     width: 40px;
     height: 40px;
