--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -60,19 +60,25 @@
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                aria-expanded="true" aria-controls="collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                 Reviews
             </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree"
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
             data-bs-parent="#accordionDetail">
             <div class="accordion-body">
                 {% for review in reviews %}
-                <div class="review">
-                    <h3>{{ review.user }} - {{ review.rating }}/5</h3>
-                    <p>{{ review.review }}</p>
-                </div>
+                {% for i in "12345" %}
+                {% if i|add:'0' <= product.rating %}
+                <i class="fa fa-star fa-xs text-orange"></i>
+                {% else %}
+                <i class="fa fa-star-o fa-xs"></i>
+                {% endif %}
+                {% endfor %}
+                <p>{{ review.review }}</p>
+                <p class="text-muted">Written by: {{ review.user }}</p>
+                <hr class="devider-full-width ">
                 {% empty %}
                 <p>No reviews yet.</p>
                 {% endfor %}
