--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -71,7 +71,7 @@ Shopping Bag
                     </button>
                 </a>
                 {% if free_delivery_delta > 0 %}
-                <p class="mb-1 free-deliver-delta">
+                <p class="mb-1 text-orange">
                     Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free delivery!
                 </p>
                 {% endif %}
