--- a/templates/components/toasts/toast_success.html
+++ b/templates/components/toasts/toast_success.html
@@ -37,7 +37,7 @@
                     </p>
                 </strong>
                 {% if free_delivery_delta > 0 %}
-                <p class="mb-1 free-deliver-delta text-center">
+                <p class="mb-1 text-orange text-center">
                     Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free delivery!
                 </p>
                 {% endif %}
