style: Arrange review section in profile and style it

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -55,3 +55,14 @@ select:invalid {
 .wishlist-image-container {
     height: 100px;
 }
+
+/*=============== Review ===============*/
+.product-container-review {
+    box-shadow: 0 2px 8px 0 rgb(0 0 0 / 17%);
+    background-color: #fff;
+}
+
+.product-image-container-review {
+    height: 100px;
+    width: 30%;
+}
