--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -38,7 +38,7 @@ Your Profile
                     class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 me-3 w-100" type="button"
                     data-bs-toggle="collapse" data-bs-target="#collapseReview" aria-expanded="false"
                     aria-controls="collapseReview">
-                    <i class="fa-solid fa-cart-shopping fa-lg"></i>&nbsp;Review
+                    <i class="fa-solid fa-pen-to-square fa-lg"></i>&nbsp;Review
                 </button>
                 <button id="deleteBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 w-100"
                     type="button" data-bs-toggle="modal" data-bs-target="#deleteModal" aria-expanded="false">
@@ -49,7 +49,7 @@ Your Profile
             <div class="collapse" id="collapseInfo">
                 <div class="d-flex flex-row justify-content-center profile-details p-lg-5 p-4 mb-4">
                     <form class="mt-3 w-100" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                        <h3 class="upper liner mb-3">Profile Info</h3>
+                        <h3 class="upper liner mb-3">Profile Info&nbsp;</h3>
                         {% csrf_token %}
                         <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
                             <legend class="fieldset-label small px-2 auto text-black mb-2">Details</legend>
@@ -85,7 +85,8 @@ Your Profile
             <!-- Order History -->
             <div class="collapse" id="collapseHistory">
                 <div class="p-lg-5 p-4 mb-4 profile-details">
-                    <h3 class="upper liner">Order History</h3>
+                    <h3 class="upper liner">Order History&nbsp;</h3>
+                    {% if order %}
                     {% for order in orders %}
                     <div class="row my-3">
                         <div class="col-sm-4 col-6">
@@ -115,12 +116,15 @@ Your Profile
                         {% endfor %}
                     </div>
                     {% endfor %}
+                    {% else %}
+                    <p>You have not placed an order, yet.</p>
+                    {% endif %}
                 </div>
             </div>
             <!-- Wishlist -->
             <div class="collapse" id="collapseWishlist">
                 <div class="p-lg-5 p-4 mb-4 profile-details">
-                    <h3 class="upper liner">Wishlist</h3>
+                    <h3 class="upper liner">Wishlist&nbsp;</h3>
                     <div class="d-flex flex-column ">
                         {% if wishlist %}
                         {% for item in wishlist %}
@@ -182,28 +186,38 @@ Your Profile
             <!-- Product Review -->
             <div class="collapse" id="collapseReview">
                 <div class="p-lg-5 p-4 mb-4 profile-details">
-                    <h3 class="upper liner">Write a Product Review</h3>
+                    <h3 class="upper liner">Write a Product Review&nbsp;</h3>
                     {% if order_item_ids %}
-                    <div class="row">
-                        {% for item in order_item_ids %}
-                        {{ item.product.title }}
-                        <div class="col-md-6 pb-4">
-                            {% if item.product.image %}
-                            <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" class="img-fluid">
-                            {% else %}
-                            <img src="{{ MEDIA_URL }}products/default-no-image.webp" alt="{{ item.product.title }}"
-                                class="img-fluid">
-                            {% endif %}
+
+                    {% for item in order_item_ids %}
+                    <div
+                        class="d-flex flex-md-column flex-row align-items-center justify-content-between product-container-review my-4 py-2 px-4">
+                        <div class="d-flex flex-sm-row flex-column align-items-center w-100">
+                            <div class="product-image-container-review">
+                                {% if item.product.image %}
+                                <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
+                                        src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                                {% else %}
+                                <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
+                                        src="{{ MEDIA_URL }}products/default-no-image.webp"
+                                        alt="{{ item.product.title }}"></a>
+                                {% endif %}
+                            </div>
+                            <div class="ms-1 w-100">
+                                <p class="mt-2 mb-1"><strong>{{ item.product.title }}</strong></p>
+                            </div>
                         </div>
-                        <form method="POST" action="{% url 'product_review' item.order_number item.product.id %}">
-                            {% csrf_token %}
-                            {{ item.review_form|crispy}}
-                            <input type="hidden" name="order_number" value="{{ item.order_number }}" />
-                            <input type="hidden" name="product_id" value="{{ item.product.id }}" />
-                            <button type="submit">Submit Review</button>
-                        </form>
-                        {% endfor %}
                     </div>
+                    <form method="POST" action="{% url 'product_review' item.order_number item.product.id %}">
+                        {% csrf_token %}
+                        {{ item.review_form|crispy}}
+                        <input type="hidden" name="order_number" value="{{ item.order_number }}">
+                        <input type="hidden" name="product_id" value="{{ item.product.id }}">
+                        <button class="btn btn-cta text-white" type="submit">Submit Review</button>
+                    </form>
+                    {% endfor %}
+                    {% else %}
+                    <p>No Products to review</p>
                     {% endif %}
                 </div>
             </div>
