feat: Add stars for product rating and add css styling

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -66,3 +66,17 @@ select:invalid {
     height: 100px;
     width: 30%;
 }
+
+.rating {
+    display: flex;
+}
+
+.rating i {
+    cursor: pointer;
+    user-select: none;
+    transition: color .25s;
+}
+
+.rating i.checked {
+    color: #cd4c1d;
+}
