feat: Add JS to rating functionality in Profile for product review. JS captures the rating value of clicked star icon and updates the value of a hidden input field. It also updates the checked status of each star element based on the rating value. The code uses forEach loop to add a click event listener to each star and sets checked status to the first star by default

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -262,4 +262,5 @@ Your Profile
 {{ block.super }}
 <script type="text/javascript" src="{% static 'profiles/js/profile_btn_toggle.js' %}"></script>
 <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+<script type="text/javascript" src="{% static 'profiles/js/star_rating.js' %}"></script>
 {% endblock %}
