--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -189,39 +189,46 @@ Your Profile
                     <h3 class="upper liner">Write a Product Review&nbsp;</h3>
                     {% if order_item_ids %}
                     {% for item in order_item_ids %}
-                    <div
-                        class="d-flex flex-md-column flex-row align-items-center justify-content-between product-container-review my-4 py-2 px-4">
-                        <div class="d-flex flex-sm-row flex-column align-items-center w-100">
-                            <div class="product-image-container-review">
-                                {% if item.product.image %}
-                                <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
-                                        src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
-                                {% else %}
-                                <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
-                                        src="{{ MEDIA_URL }}products/default-no-image.webp"
-                                        alt="{{ item.product.title }}"></a>
-                                {% endif %}
-                            </div>
-                            <div class="ms-1 w-100">
-                                <p class="mt-2 mb-1"><strong>{{ item.product.title }}</strong></p>
+                    <div class="d-flex flex-md-row flex-column justify-content-center mb-4">
+                        <div class="product-container-review my-4 py-2 px-4">
+                            <div class="d-flex flex-sm-row flex-column align-items-center">
+                                <div class="product-image-container-review">
+                                    {% if item.product.image %}
+                                    <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
+                                            src="{{ item.product.image.url }}" alt="{{ item.product.title }}"></a>
+                                    {% else %}
+                                    <a href="{% url 'product_detail' item.product.pk %}"><img class="product-img"
+                                            src="{{ MEDIA_URL }}products/default-no-image.webp"
+                                            alt="{{ item.product.title }}"></a>
+                                    {% endif %}
+                                </div>
+                                <div class="ms-1 w-100">
+                                    <p class="mt-2 mb-1"><strong>{{ item.product.title }}</strong></p>
+                                </div>
                             </div>
                         </div>
+                        <form method="POST" action="{% url 'product_review' item.order_number item.product.id %}"
+                            class="px-4 pt-2 my-4">
+                            {% csrf_token %}
+                            <div class="rating mb-4">
+                                <i class="fa fa-star fa-lg star-1" data-rating="1"
+                                    data-form-id="{{ item.product.id }}"></i>
+                                <i class="fa fa-star fa-lg star-2" data-rating="2"
+                                    data-form-id="{{ item.product.id }}"></i>
+                                <i class="fa fa-star fa-lg star-3" data-rating="3"
+                                    data-form-id="{{ item.product.id }}"></i>
+                                <i class="fa fa-star fa-lg star-4" data-rating="4"
+                                    data-form-id="{{ item.product.id }}"></i>
+                                <i class="fa fa-star fa-lg star-5" data-rating="5"
+                                    data-form-id="{{ item.product.id }}"></i>
+                            </div>
+                            {{ item.review_form|crispy }}
+                            <input type="hidden" id="rating-{{ item.product.id }}" name="rating" value="1">
+                            <input type="hidden" name="order_number" value="{{ item.order_number }}">
+                            <input type="hidden" name="product_id" value="{{ item.product.id }}">
+                            <button class="btn btn-cta text-white upper" type="submit">Submit Review</button>
+                        </form>
                     </div>
-                    <form method="POST" action="{% url 'product_review' item.order_number item.product.id %}">
-                        {% csrf_token %}
-                        <div class="rating mb-4">
-                            <i class="fa fa-star fa-lg star-1" data-rating="1" data-form-id="{{ item.product.id }}"></i>
-                            <i class="fa fa-star fa-lg star-2" data-rating="2" data-form-id="{{ item.product.id }}"></i>
-                            <i class="fa fa-star fa-lg star-3" data-rating="3" data-form-id="{{ item.product.id }}"></i>
-                            <i class="fa fa-star fa-lg star-4" data-rating="4" data-form-id="{{ item.product.id }}"></i>
-                            <i class="fa fa-star fa-lg star-5" data-rating="5" data-form-id="{{ item.product.id }}"></i>
-                        </div>
-                        {{ item.review_form|crispy }}
-                        <input type="hidden" id="rating-{{ item.product.id }}" name="rating" value="1">
-                        <input type="hidden" name="order_number" value="{{ item.order_number }}">
-                        <input type="hidden" name="product_id" value="{{ item.product.id }}">
-                        <button class="btn btn-cta text-white" type="submit">Submit Review</button>
-                    </form>
                     {% endfor %}
                     {% else %}
                     <p>No Products to review</p>
