fix: horizontal line show after last element of reviews. The reviews section of the PDP  would show an extra horizontal line below the last review. To fix this I updated the conditional statement that inserts horizontal lines between reviews to only show the line if the current review is not the last one.

--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -78,7 +78,9 @@
                 {% endfor %}
                 <p>{{ review.review }}</p>
                 <p class="text-muted">Written by: {{ review.user }}</p>
-                <hr class="devider-full-width ">
+                {% if not forloop.last %}
+                <hr class="devider-full-width">
+                {% endif %}
                 {% empty %}
                 <p>No reviews yet.</p>
                 {% endfor %}
