--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -1,50 +1,56 @@
-<div class="d-flex align-items-center">
-    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-        {% csrf_token %}
-        <div class="form-row">
-            <div class="col-12">
-                <div class="form-group">
-                    <div class="input-group mb-3 d-flex align-items-center">
-                        <div class="input-group-prepend pe-2">
-                            <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
-                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                <span class="icon">
-                                    <i class="fas fa-minus"></i>
-                                </span>
-                            </button>
-                        </div>
-                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99"
-                            data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" required>
-                        <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
-                        <div class="input-group-append ps-2">
-                            <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
-                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                <span class="icon">
-                                    <i class="fas fa-plus"></i>
-                                </span>
-                            </button>
+<!-- Add Product to Bag-->
+<div class="d-flex align-items-end">
+    <div class="d-flex align-items-center">
+        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <!-- Quantity Input -->
+                        <div class="input-group mb-3 d-flex align-items-center">
+                            <div class="input-group-prepend pe-2">
+                                <button class="decrement-qty btn btn-black btn-outline-dark btn-sm"
+                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                    <span class="icon">
+                                        <i class="fas fa-minus"></i>
+                                    </span>
+                                </button>
+                            </div>
+                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
+                                max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" required>
+                            <label for="id_qty_{{ product.id }}" class="qty-label px-1">Quantity:</label>
+                            <div class="input-group-append ps-2">
+                                <button class="increment-qty btn btn-black btn-outline-dark btn-sm"
+                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                    <span class="icon">
+                                        <i class="fas fa-plus"></i>
+                                    </span>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex align-items-center">
-                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                    <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
-                        <i class="fa-solid fa-cart-shopping"></i> Add to Bag
-                    </button>
+                    <!-- Add to Bag -->
+                    <div class="d-flex align-items-center">
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
+                            <i class="fa-solid fa-cart-shopping"></i> Add to Bag
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+    <!-- Add to Wishlist-->
     {% if user.is_authenticated %}
     {% if product.id in wishlist_products %}
-    <a class="add-wishlist-pdp disabled" href="#" aria-label="Item is already in your Wishlist">
-        <i class="fa-solid fa-heart fa-sm"></i>
+    <a class="btn btn-wishlist btn-shop-lg disabled" href="#" aria-label="Item is already in your Wishlist">
+        <i class="fa-solid fa-heart fa-lg"></i>
     </a>
     {% else %}
     <form method="post" action="{% url 'add-to-wishlist' product.id %}">
         {% csrf_token %}
-        <button class="add-wishlist-pdp btn btn-icon" type="submit" aria-label="Add to Wishlist">
-            <i class="fa-regular fa-heart fa-sm"></i>
+        <button class="btn btn-wishlist btn-shop-lg" type="submit" aria-label="Add to Wishlist">
+            <i class="fa-regular fa-heart fa-lg"></i>
         </button>
     </form>
     {% endif %}
