style: Change user options drop down menu to text-align right

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,7 +182,8 @@ a {
 }
 
 .user-options {
-    right: 10px;
+    right: 5px;
+    text-align: right;
 }
 
 /*=============== Hero Banner ===============*/
