--- a/support/templates/support/contact.html
+++ b/support/templates/support/contact.html
@@ -14,7 +14,8 @@ Contact Us
     <!-- Contact Form -->
     <section class="margin-top mx-3">
         <h1 class="liner upper">Contact Form&nbsp;</h1>
-        <p class="px-5 py-3 ms-4">We're always here to help! If you have any questions or concerns, please don't
+        <p class="px-sm-5 px-2 py-3 ms-sm-4 ms-0">We're always here to help! If you have any questions or concerns,
+            please don't
             hesitate to
             contact us
             using the form below. Our dedicated support team will get back to you as soon as possible.</p>
