--- a/products/templates/products/components/product_form_add_to_cart_pdp.html
+++ b/products/templates/products/components/product_form_add_to_cart_pdp.html
@@ -47,7 +47,7 @@
         <i class="fa-solid fa-heart fa-lg"></i>
     </a>
     {% else %}
-    <form method="post" action="{% url 'add-to-wishlist' product.id %}">
+    <form method="post" action="{% url 'add_to_wishlist' product.id %}">
         {% csrf_token %}
         <button class="btn btn-wishlist btn-shop-lg" type="submit" aria-label="Add to Wishlist">
             <i class="fa-regular fa-heart fa-lg"></i>
