--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,6 +61,16 @@ a {
     margin-right: 1rem;
 }
 
+.form-control:focus {
+    border-color: #717171;
+    box-shadow: 0 0 0 0.25rem rgb(205 76 30 / 46%);
+}
+
+.form-select:focus {
+    border-color: #717171;
+    box-shadow: 0 0 0 0.25rem rgb(205 76 30 / 46%);
+}
+
 /*=============== Navbar ===============*/
 .navbar {
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
@@ -546,10 +556,6 @@ footer ul {
 
 .allauth-form-inner-content input {
     border-color: #000;
-}
-
-.allauth-form-inner-content .form-control {
-    background-color: transparent;
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
