--- a/products/templates/products/filter.html
+++ b/products/templates/products/filter.html
@@ -27,19 +27,19 @@
                 <div class="dropdown-menu" aria-labelledby="category-dropdown">
                     <div class="form-check">
                         {% if not selected_category %}
-                        <input class="form-check-input" type="checkbox" name="category_all" id="category_all" checked>
+                        <input class="form-check-input" type="radio" name="category_all" id="category_all" checked>
                         {% else %}
-                        <input class="form-check-input" type="checkbox" name="category_all" id="category_all">
+                        <input class="form-check-input" type="radio" name="category_all" id="category_all">
                         {% endif %}
                         <label class="form-check-label" for="category_all">All</label>
                     </div>
                     {% for category in categories %}
                     <div class="form-check">
                         {% if category.name == selected_category %}
-                        <input class="form-check-input" type="checkbox" name="category" id="{{ category.name }}"
+                        <input class="form-check-input" type="radio" name="category" id="{{ category.name }}"
                             value="{{ category.name }}" checked>
                         {% else %}
-                        <input class="form-check-input" type="checkbox" name="category" id="{{ category.name }}"
+                        <input class="form-check-input" type="radio" name="category" id="{{ category.name }}"
                             value="{{ category.name }}">
                         {% endif %}
                         <label class="form-check-label" for="{{ category.name }}">{{ category.friendly_name }}</label>
@@ -56,20 +56,19 @@
                 <div class="dropdown-menu" aria-labelledby="brand-dropdown">
                     <div class="form-check">
                         {% if not selected_brand %}
-                        <input class="form-check-input" type="checkbox" name="brand_all" id="brand_all" checked>
+                        <input class="form-check-input" type="radio" name="brand_all" id="brand_all" checked>
                         {% else %}
-                        <input class="form-check-input" type="checkbox" name="brand_all" id="brand_all">
+                        <input class="form-check-input" type="radio" name="brand_all" id="brand_all">
                         {% endif %}
                         <label class="form-check-label" for="brand_all">All</label>
                     </div>
                     {% for brand in brands %}
                     <div class="form-check">
                         {% if brand == selected_brand %}
-                        <input class="form-check-input" type="checkbox" name="brand" id="{{ brand }}"
-                            value="{{ brand }}" checked>
+                        <input class="form-check-input" type="radio" name="brand" id="{{ brand }}" value="{{ brand }}"
+                            checked>
                         {% else %}
-                        <input class="form-check-input" type="checkbox" name="brand" id="{{ brand}}"
-                            value="{{ brand }}">
+                        <input class="form-check-input" type="radio" name="brand" id="{{ brand}}" value="{{ brand }}">
                         {% endif %}
                         <label class="form-check-label" for="{{ brand}}">{{ brand }}</label>
                     </div>
