--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -1,4 +1,6 @@
+{% load humanize %}
 <div class="accordion my-5" id="accordionDetail">
+    <!-- Product Description -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
@@ -13,6 +15,7 @@
             </div>
         </div>
     </div>
+    <!-- Product Tech Details -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -58,6 +61,7 @@
             </div>
         </div>
     </div>
+    <!-- Product Reviews -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -77,7 +81,8 @@
                 {% endif %}
                 {% endfor %}
                 <p>{{ review.review }}</p>
-                <p class="text-muted">Written by: {{ review.user }}</p>
+                <p class="text-muted">Written by: {{ review.user }} <small>({{ review.created_at|naturaltime }})</small>
+                </p>
                 {% if not forloop.last %}
                 <hr class="devider-full-width">
                 {% endif %}
