--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,7 +14,7 @@ Your Profile
 <main>
     <section id="profile" class="margin-top mx-3">
         <div class="container-fluid container-lg g-0 g-md-1">
-            <h2 class="liner upper">My Profile </h2>
+            <h2 class="liner upper">My Profile&nbsp;</h2>
             <button class="btn pb-4 back-button" onclick="goBack()">&larr; Back</button>
             <div class="d-flex flex-sm-row flex-column justify-content-center mb-4">
                 <button id="collapseInfoBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 me-3 w-100"
@@ -155,7 +155,7 @@ Your Profile
                                     {% endif %}
 
                                 </div>
-                                <div class="d-flex flex-column flex-sm-row align-items-center">
+                                <div class="d-flex flex-column flex-md-row align-items-center">
                                     <form class="form"
                                         action="{% url 'add_to_bag' item.product.pk %}?{{ request.GET.urlencode }}"
                                         method="POST">
@@ -208,7 +208,7 @@ Your Profile
                             </div>
                         </div>
                         <form method="POST" action="{% url 'product_review' item.order_number item.product.id %}"
-                            class="px-4 pt-2 my-4 w-100">
+                            class="px-sm-4 px-0 pt-2 my-4 w-100">
                             {% csrf_token %}
                             <div class="rating mb-4">
                                 <i class="fa fa-star fa-lg star-1" data-rating="1"
