feat: Add daily revenue chart to admin panel dashbaord. Add a Chart.js line chart to display revenue data, which is parsed from a string and turned into an array.

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -8,3 +8,8 @@
     border: 1px solid #ccc;
     padding: .5rem;
 }
+
+.daily-revenue-chart-wrapper {
+    height: 30vh !important;
+    width: 60vw !important;
+}
