--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -142,22 +142,39 @@
     // Get the country revenue data from the data attribute of the revenue-by-country-chart canvas element
     const countryRevenueData = JSON.parse(document.getElementById('revenue-by-country-chart').getAttribute(
         'data-country-revenue'));
+
+    // Sort the country revenue data in descending order
+    const sortedCountryRevenueData = Object.entries(countryRevenueData).sort((a, b) => b[1] - a[1]);
+
+    // Get the top 6 countries and group the remaining into "Others"
+    const topCountries = sortedCountryRevenueData.slice(0, 6).map(([country, revenue]) => country);
+    const topRevenues = sortedCountryRevenueData.slice(0, 6).map(([country, revenue]) => revenue);
+    const remainingRevenue = sortedCountryRevenueData.slice(6).reduce((sum, [country, revenue]) => sum + revenue, 0);
+
+    const backgroundColor = [
+        '#FF6384',
+        '#36A2EB',
+        '#FFCE56',
+        '#8C4646',
+        '#A6D785',
+        '#DE9E36',
+    ];
+
+    // Add a "Others" category to the data
+    if (sortedCountryRevenueData.length > 6) {
+        topCountries.push("Others");
+        topRevenues.push(remainingRevenue);
+        backgroundColor.push("#BBBBBB");
+    }
+
     // Create a new Chart.js pie chart with the country revenue data
     const countryRevenueChart = new Chart(document.getElementById('revenue-by-country-chart'), {
         type: 'pie',
         data: {
-            labels: Object.keys(countryRevenueData),
+            labels: topCountries,
             datasets: [{
-                data: Object.values(countryRevenueData),
-                backgroundColor: [
-                    '#FF6384',
-                    '#36A2EB',
-                    '#FFCE56',
-                    '#8C4646',
-                    '#A6D785',
-                    '#DE9E36',
-                    '#7499B1',
-                ]
+                data: topRevenues,
+                backgroundColor: backgroundColor
             }]
         },
         options: {
